Prevents mouse events from being trapped by overlay scroll views when they are not visible. This allows buttons to be partially covered by an overlay scroll view and still be clickable unless the mouse wheel brings the scroller visible again. This isn't supported in IE < 11, but it's a simple improvement and worthwhile for the majority of browsers. The alternative is to capture the event, determine the target beneath the scroller and simulate the event there, which is much more involved.

--- a/frameworks/desktop/resources/overlay-scroller.css
+++ b/frameworks/desktop/resources/overlay-scroller.css
@@ -70,6 +70,12 @@
     position: absolute;
   }
 
+  &.fade-out {
+    // When the overlay scroller isn't visible, pass events through. This isn't
+    // supported in IE < 11 (http://caniuse.com/#feat=pointer-events).
+    pointer-events: none;
+  }
+
   &.sc-vertical {
 
     /* Thumb */
